k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: criticapp-web
  namespace: criticapp
spec:
  replicas: 2
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: criticapp-web
  template:
    metadata:
      labels:
        app: criticapp-web
    spec:
      containers:
        - name: web
          image: ghcr.io/batman-nair/criticapp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              host: 127.0.0.1
              path: /health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              host: 127.0.0.1
              path: /health/
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
